--- a/membership.html
+++ b/membership.html
@@ -128,7 +128,8 @@
     </p>
     <p>
       By completing your purchase, you acknowledge and agree to this no-refund policy.
-      If you encounter a technical issue or believe you were charged in error, please contact us at <strong>sheislegendkreations@gmail.com</strong> and we’ll be happy to assist.
+      If you encounter a technical issue or believe you were charged in error, please contact us at <strong>
+jessislegend@darkheartsxoxoxai.com</strong> and we’ll be happy to assist.
     </p>
 
     <h2 style="color:#ffcad4; text-align:center; margin-top: 2em;">Terms of Service</h2>
