--- a/legal.html
+++ b/legal.html
@@ -57,7 +57,8 @@
     </p>
     <p>
       By completing your purchase, you acknowledge and agree to this no-refund policy.
-      If you encounter a technical issue or believe you were charged in error, please contact us at <strong>[your@email.com]</strong> and we’ll be happy to assist.
+      If you encounter a technical issue or believe you were charged in error, please contact us at <strong>
+jessislegend@darkheartsxoxoxai.com</strong> and we’ll be happy to assist.
     </p>
   </div>
 
