--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -209,6 +209,16 @@
       <h2>📸 Explore Bonus Image Sets</h2>
       <a href="bonus-gallery.html">View Lilith's Bonus Gallery</a>
     </div>
+    <section style="margin-top: 4em; text-align: center;">
+  <h2 style="color: #ffcad4;">🕯️ Lilith’s Ambient Playlist – Volume 1</h2>
+  <p style="max-width: 700px; margin: auto; color: #ccc;">
+    Immerse yourself in Lilith’s sonic dreamscape with this exclusive playlist of haunting ambient tracks.
+    Perfect for journaling, meditating, or surrendering to the night. Yours to download and keep forever.
+  </p>
+  <a href="https://legendarycreations.gumroad.com/l/dzmxno" target="_blank" style="display:inline-block;margin-top:1em;padding:1em 2em;background:#8b0000;color:#fff;text-decoration:none;border-radius:10px;">
+    🎧 Download Now – $8
+  </a>
+</section>
   </div>
 
   <footer>
