--- a/bonus-gallery.html
+++ b/bonus-gallery.html
@@ -4,18 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lilith's Bonus Gallery</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter&family=Cinzel&family=Great+Vibes&display=swap" rel="stylesheet">
   <style>
     body {
       background-color: #0e0e0e;
       color: #fff;
-      font-family: 'Inter', sans-serif;
+      font-family: 'Cinzel', serif;
       padding: 2em;
       max-width: 1000px;
       margin: auto;
     }
-    h1, h2 {
-      font-family: 'Playfair Display', serif;
+    h1 {
+      font-family: 'Great Vibes', cursive;
+      font-size: 2.5em;
+      color: #ffcad4;
+      text-align: center;
+      margin-bottom: 0.5em;
+    }
+    h2 {
+      font-family: 'Cinzel', serif;
       color: #ffcad4;
       text-align: center;
     }
@@ -161,5 +168,3 @@
   </script>
 </body>
 </html>
-
- 
