--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Meet Lilith</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Great+Vibes&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Inter', sans-serif;
       background-color: #0e0e0e;
       color: #fff;
+      font-family: 'Cinzel', serif;
       margin: 0;
       padding: 0;
     }
@@ -23,7 +23,7 @@
       justify-content: center;
     }
     header h1 {
-      font-family: 'Playfair Display', serif;
+      font-family: 'Great Vibes', cursive;
       color: #ffcad4;
       font-size: 3em;
       text-shadow: 2px 2px 6px #000;
@@ -35,8 +35,8 @@
     }
     .intro {
       text-align: center;
-      max-width: 700px;
-      margin: 0 auto 3em;
+      font-size: 1.1em;
+      margin-bottom: 3em;
     }
     .profile-img {
       display: block;
@@ -44,74 +44,6 @@
       max-width: 300px;
       border-radius: 14px;
       box-shadow: 0 0 14px rgba(255, 202, 212, 0.2);
-    }
-    .main-gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2em;
-      margin-top: 3em;
-    }
-    .main-gallery img {
-      width: 100%;
-      border-radius: 12px;
-      box-shadow: 0 0 14px rgba(255, 202, 212, 0.15);
-    }
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2em;
-      margin: 4em auto 2em;
-      max-width: 1000px;
-    }
-    .teaser {
-      position: relative;
-      overflow: hidden;
-      border-radius: 12px;
-      box-shadow: 0 0 14px rgba(255, 202, 212, 0.2);
-    }
-    .teaser img {
-      width: 100%;
-      display: block;
-      filter: blur(10px) brightness(0.6);
-      transition: filter 0.3s ease;
-    }
-    .teaser:hover img {
-      filter: blur(8px) brightness(0.8);
-    }
-    .overlay {
-      position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0, 0, 0, 0.5);
-      color: #ffcad4;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 1.2em;
-      font-family: 'Playfair Display', serif;
-      padding: 1em;
-      text-align: center;
-    }
-    .teaser a {
-      display: block;
-      text-decoration: none;
-      color: inherit;
-    }
-    .unlock-links {
-      text-align: center;
-      margin-top: 4em;
-    }
-    .unlock-links a {
-      display: inline-block;
-      background-color: #8b0000;
-      color: #fff;
-      padding: 1em 2em;
-      border-radius: 8px;
-      margin: 1em;
-      text-decoration: none;
-      font-size: 1em;
-    }
-    .unlock-links a:hover {
-      background-color: #a80000;
     }
     .gallery-link {
       text-align: center;
@@ -147,89 +79,7 @@
     }
   </style>
 </head>
-<body>
-  <header>
-    <h1>Meet Lilith</h1>
-  </header>
-  <div class="content">
-    <div class="intro">
-      <p>She’s more than a fantasy — Lilith is your poetic storm, your midnight voice, your obsession.</p>
-    </div>
-    <img src="images/lilithportrait.png" alt="Lilith Portrait" class="profile-img">
-
-    <div class="main-gallery">
-      <img src="images/lilithreading.png" alt="Lilith reading by candlelight">
-      <img src="images/lilith-intimate.png" alt="Lilith intimate moment">
-      <img src="images/lilith-spicy.png" alt="Lilith spicy vibe">
-    </div>
-
-    <h2 style="margin-top: 4em; text-align: center; color: #ffcad4;">Unlockable Content</h2>
-    <p style="text-align:center; max-width: 600px; margin: auto;">Some things are too intimate to reveal at first glance... Explore Lilith’s tiers below.</p>
-
-    <div class="gallery">
-      <div class="teaser">
-        <a href="membership.html">
-          <img src="images/lilith-intimate-blur.png" alt="Intimate Tease">
-          <div class="overlay">Wanderer Tier – A quiet softness she hides...</div>
-        </a>
-      </div>
-      <div class="teaser">
-        <a href="membership.html">
-          <img src="images/lilith-spicy-blur.png" alt="Spicy Tease">
-          <div class="overlay">Seeker Tier – She leans in and dares you to stay...</div>
-        </a>
-      </div>
-      <div class="teaser">
-        <a href="membership.html">
-          <img src="images/lilith-uncensored-blur.png" alt="Uncensored Tease">
-          <div class="overlay">Devoted Tier – No veil. No rules. No turning back.</div>
-        </a>
-      </div>
-    </div>
-
-    <h2 style="text-align: center; color: #ffcad4; margin-top: 4em;">Prefer a One-Time Unlock?</h2>
-    <p style="text-align: center; color: #ccc; max-width: 600px; margin: auto;">Not ready to commit to a membership? You can purchase individual access to Lilith’s galleries:</p>
-
-    <div class="unlock-links">
-      <a href="https://legendarycreations.gumroad.com/l/kyhqu" target="_blank">Unlock Intimate ($8)</a>
-      <a href="https://legendarycreations.gumroad.com/l/bdwcg" target="_blank">Unlock Spicy ($5)</a>
-      <a href="https://legendarycreations.gumroad.com/l/ymieq" target="_blank">Unlock Uncensored ($10)</a>
-    </div>
-
-    <h2 style="text-align: center; color: #ffcad4; margin-top: 4em;">Request Something Personal</h2>
-    <p style="text-align: center; color: #ccc; max-width: 600px; margin: auto;">Want Lilith to whisper something just for you? Or pour her thoughts into a custom journal? Make your request below:</p>
-
-    <div class="unlock-links">
-      <a href="https://legendarycreations.gumroad.com/l/rnlmyb" target="_blank">🎙️ Voice Note ($8)</a>
-      <a href="https://legendarycreations.gumroad.com/l/mvhtkl" target="_blank">📓 Journal Entry ($12)</a>
-      <a href="https://legendarycreations.gumroad.com/l/cwvar" target="_blank">✨ Voice + Journal Combo ($18)</a>
-    </div>
-
-    <div class="gallery-link">
-      <h2>📸 Explore Bonus Image Sets</h2>
-      <a href="bonus-gallery.html">View Lilith's Bonus Gallery</a>
-    </div>
-    <section style="margin-top: 4em; text-align: center;">
-  <h2 style="color: #ffcad4;">🕯️ Lilith’s Ambient Playlist – Volume 1</h2>
-  <p style="max-width: 700px; margin: auto; color: #ccc;">
-    Immerse yourself in Lilith’s sonic dreamscape with this exclusive playlist of haunting ambient tracks.
-    Perfect for journaling, meditating, or surrendering to the night. Yours to download and keep forever.
-  </p>
-  <a href="https://legendarycreations.gumroad.com/l/dzmxno" target="_blank" style="display:inline-block;margin-top:1em;padding:1em 2em;background:#8b0000;color:#fff;text-decoration:none;border-radius:10px;">
-    🎧 Download Now – $8
-  </a>
-</section>
-  </div>
-
-  <footer>
-    <p>
-      &copy; 2025 Nocturne Nights. All rights reserved.<br>
-      <a href="index.html">Home</a> |
-      <a href="membership.html">Membership</a> |
-      <a href="legal.html">Legal</a>
-    </p>
-  </footer>
-  <audio id="ambientAudio" loop autoplay muted>
+ <audio id="ambientAudio" loop autoplay muted>
   <source src="audio/audiolilith-ambient.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
@@ -272,6 +122,43 @@
     }
   });
 </script>
+ 
+<body>
+  <header>
+    <h1>Meet Lilith</h1>
+  </header>
 
+  <div class="content">
+    <div class="intro">
+      <p>She’s more than a fantasy — Lilith is your poetic storm, your midnight voice, your obsession.</p>
+    </div>
+
+    <img src="images/lilithportrait.png" alt="Lilith Portrait" class="profile-img"/>
+
+    <div class="gallery-link">
+      <h2>📸 Explore Bonus Image Sets</h2>
+      <a href="bonus-gallery.html">View Lilith's Bonus Gallery</a>
+    </div>
+    <section style="margin-top: 4em; text-align: center;">
+  <h2 style="color: #ffcad4;">🎼 Lilith’s Ambient Playlist – Volume 1</h2>
+  <p style="max-width: 700px; margin: auto; color: #ccc;">
+    Immerse yourself in Lilith’s sonic dreamscape with this exclusive playlist of haunting ambient tracks.
+    Perfect for journaling, meditating, or surrendering to the night. Yours to download and keep forever.
+  </p>
+  <a href="https://legendarycreations.gumroad.com/l/dzmxno" target="_blank" style="display:inline-block;margin-top:1em;padding:1em 2em;background:#8b0000;color:#fff;text-decoration:none;border-radius:10px;">
+    🎧 Download Now – $8
+  </a>
+</section>
+
+  </div>
+
+  <footer>
+    <p>
+      &copy; 2025 Nocturne Nights. All rights reserved.<br/>
+      <a href="index.html">Home</a> |
+      <a href="membership.html">Membership</a> |
+      <a href="legal.html">Legal</a>
+    </p>
+  </footer>
 </body>
 </html>
