--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -134,10 +134,10 @@
   </div>
   <h2>💎 Membership Tiers</h2>
   <div class="purchase-block">
-    <p><strong>Curious Tier</strong> – Sneak peeks & early updates</p>
+    <p><strong>Wanderer Tier</strong> – Sneak peeks & early updates</p>
     <a href="membership.html">Join for $10/mo</a>
     <hr style="margin: 1em 0; border-color: #444;">
-    <p><strong>Obsessed Tier</strong> – Full access to Lilith’s gallery tiers</p>
+    <p><strong>Seeker Tier</strong> – Full access to Lilith’s gallery tiers</p>
     <a href="membership.html">Join for $20/mo</a>
     <hr style="margin: 1em 0; border-color: #444;">
     <p><strong>Devoted Tier</strong> – All unlocks + exclusive audio, playlists, and perks</p>
