--- a/members-only.html
+++ b/members-only.html
@@ -97,6 +97,29 @@
       <a href="lilith-uncensored.html">Unlock Lilith's Uncensored Gallery</a>
     </div>
   </div>
+<section style="background-color: #1a1a1a; border: 2px solid #8b0000; border-radius: 15px; padding: 2em; max-width: 700px; margin: 3em auto; text-align: center; box-shadow: 0 0 20px rgba(255, 202, 212, 0.15);">
+  <h2 style="color: #ffcad4;">🎼 Exclusive Devoted Reward</h2>
+  <p style="color: #ccc; font-style: italic; font-size: 1.1em; margin-bottom: 1.5em;">
+    Feel her presence even in the silence.<br/>
+    Download <strong>Lilith’s Ambient Playlist – Volume 1</strong> and drift into her nocturnal dreamscape.
+  </p>
+  <a href="https://drive.google.com/uc?export=download&id=104L8fHQDJQdGtGaMY6oGN7pdS143wHU-" 
+     download 
+     style="display:inline-block;padding:1em 2em;background:#8b0000;color:#fff;border-radius:12px;text-decoration:none;font-size:1.1em;">
+    ⬇️ Download Playlist Bundle
+  </a>
+  <p style="margin-top: 2em; color: #888; font-size: 0.9em; font-style: italic;">
+    Thank you for supporting Lilith and keeping her spirit alive.
+  </p>
+</section>
+
+<section style="background-color: #1a1a1a; border: 2px dashed #8b0000; border-radius: 15px; padding: 2em; max-width: 700px; margin: 3em auto; text-align: center; box-shadow: 0 0 15px rgba(255, 202, 212, 0.1);">
+  <h2 style="color: #ffcad4;">🎁 More Secrets Await</h2>
+  <p style="color: #ccc; font-style: italic; font-size: 1.1em; margin-bottom: 1.5em;">
+    New exclusive rewards are being crafted deep within the night.<br/>
+    Check back soon for more gifts from Lilith’s private vault.
+  </p>
+</section>
 
   <footer>
     <p>
