--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
       text-align: center;
     }
     header img {
-      width: 250px;
-      margin: 2em auto 1em auto;
-      display: block;
+  width: 250px;
+  margin: 2em auto 1em auto;
+  display: block;
+  filter: drop-shadow(0 0 12px #ffcad4);
+}
     }
     h1 {
       font-family: 'Great Vibes', cursive;
