--- a/jax-profile.html
+++ b/jax-profile.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="hero" style="background-image: url('images/jax1.png');">
+  <div class="hero" style="background-image: url('images/Jax1.png');">
     <h1>Meet Jax Raze<br>Your chaotic, tattooed storm</h1>
   </div>
 
@@ -25,7 +25,7 @@
   <section class="section">
     <h2>Backstage Pass — Jax's Private Collection</h2>
     <div class="gallery">
-      <img src="images/jax1.png" alt="Jax profile">
+      <img src="images/Jax1.png" alt="Jax profile">
       <img src="images/jax2.png" alt="Jax with guitar">
       <img src="images/locked3.png" alt="Locked - Premium" style="opacity: 0.4;">
       <img src="images/locked4.png" alt="Locked - Premium" style="opacity: 0.4;">
