--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <!-- Jax Card -->
     <div class="companion-card">
-      <img src="images/jaxportrait.png" alt="Jax">
+      <img src="images/Jax1.png" alt="Jax">
       <h2 style="color: #ffcad4;">Jax</h2>
       <a href="jax-profile.html">Meet Jax</a>
     </div>
