--- a/index.html
+++ b/index.html
@@ -97,16 +97,17 @@
 
 <body>
 <!-- Butterfly Swarm -->
-<div class="butterfly" style="left: 5%; animation-delay: 0s;"></div>
-<div class="butterfly" style="left: 15%; animation-delay: 3s;"></div>
-<div class="butterfly" style="left: 25%; animation-delay: 6s;"></div>
-<div class="butterfly" style="left: 35%; animation-delay: 1s;"></div>
-<div class="butterfly" style="left: 45%; animation-delay: 5s;"></div>
-<div class="butterfly" style="left: 55%; animation-delay: 2s;"></div>
-<div class="butterfly" style="left: 65%; animation-delay: 4s;"></div>
-<div class="butterfly" style="left: 75%; animation-delay: 7s;"></div>
-<div class="butterfly" style="left: 85%; animation-delay: 6s;"></div>
-<div class="butterfly" style="left: 95%; animation-delay: 3s;"></div>
+<div class="butterfly pink" style="left: 5%; animation-delay: 0s;"></div>
+<div class="butterfly silver" style="left: 15%; animation-delay: 3s;"></div>
+<div class="butterfly purple" style="left: 25%; animation-delay: 6s;"></div>
+<div class="butterfly pink" style="left: 35%; animation-delay: 1s;"></div>
+<div class="butterfly silver" style="left: 45%; animation-delay: 5s;"></div>
+<div class="butterfly purple" style="left: 55%; animation-delay: 2s;"></div>
+<div class="butterfly pink" style="left: 65%; animation-delay: 4s;"></div>
+<div class="butterfly silver" style="left: 75%; animation-delay: 7s;"></div>
+<div class="butterfly purple" style="left: 85%; animation-delay: 6s;"></div>
+<div class="butterfly pink" style="left: 95%; animation-delay: 3s;"></div>
+
 
   <audio id="ambientAudio" loop autoplay muted>
     <source src="audio/Welcome-Dark-Hearts.mp3" type="audio/mpeg">
