--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
 <div class="butterfly silver" style="left: 75%; animation-delay: 7s;"></div>
 <div class="butterfly purple" style="left: 85%; animation-delay: 6s;"></div>
 <div class="butterfly pink" style="left: 95%; animation-delay: 3s;"></div>
+<!-- Sparkle Flickers -->
+<div class="sparkle" style="left: 10%; animation-delay: 0s;"></div>
+<div class="sparkle" style="left: 25%; animation-delay: 2s;"></div>
+<div class="sparkle" style="left: 40%; animation-delay: 4s;"></div>
+<div class="sparkle" style="left: 55%; animation-delay: 1s;"></div>
+<div class="sparkle" style="left: 70%; animation-delay: 3s;"></div>
+<div class="sparkle" style="left: 85%; animation-delay: 5s;"></div>
 
 
   <audio id="ambientAudio" loop autoplay muted>
