--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -112,6 +112,14 @@
   </style>
 </head>
 <body>
+<!-- Floating Roses -->
+<div class="rose" style="left: 8%; animation-delay: 0s;"></div>
+<div class="rose" style="left: 18%; animation-delay: 4s;"></div>
+<div class="rose" style="left: 30%; animation-delay: 2s;"></div>
+<div class="rose" style="left: 45%; animation-delay: 5s;"></div>
+<div class="rose" style="left: 60%; animation-delay: 1s;"></div>
+<div class="rose" style="left: 72%; animation-delay: 3s;"></div>
+<div class="rose" style="left: 85%; animation-delay: 6s;"></div>
 
 <audio id="ambientAudio" loop autoplay muted>
   <source src="audio/audiolilith-ambient.mp3" type="audio/mpeg">
