--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -6,6 +6,33 @@
   <title>Meet Lilith</title>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Great+Vibes&display=swap" rel="stylesheet">
   <style>
+    .rose {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background-image: url('images/rose.png'); /* Update if using a different filename */
+  background-size: contain;
+  background-repeat: no-repeat;
+  opacity: 0.6;
+  animation: floatRose 22s linear infinite;
+  pointer-events: none;
+  z-index: 0;
+}
+
+@keyframes floatRose {
+  0% {
+    transform: translateY(100vh) rotate(0deg);
+    opacity: 0;
+  }
+  20% {
+    opacity: 0.7;
+  }
+  100% {
+    transform: translateY(-20vh) rotate(360deg);
+    opacity: 0;
+  }
+}
+
     body {
       background-color: #0e0e0e;
       color: #fff;
