--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -7,9 +7,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Great+Vibes&display=swap" rel="stylesheet">
   <style>
     .rose {
+      .rose {
+  /* ...other properties */
+  filter: drop-shadow(0 0 6px #ff4d6d);
+}
   position: absolute;
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   background-image: url('images/rose.png'); /* Update if using a different filename */
   background-size: contain;
   background-repeat: no-repeat;
