--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -144,13 +144,10 @@
 </head>
 <body>
 <!-- Floating Roses -->
-<div class="rose" style="left: 8%; animation-delay: 0s;"></div>
-<div class="rose" style="left: 18%; animation-delay: 4s;"></div>
-<div class="rose" style="left: 30%; animation-delay: 2s;"></div>
-<div class="rose" style="left: 45%; animation-delay: 5s;"></div>
-<div class="rose" style="left: 60%; animation-delay: 1s;"></div>
-<div class="rose" style="left: 72%; animation-delay: 3s;"></div>
-<div class="rose" style="left: 85%; animation-delay: 6s;"></div>
+<div class="rose" style="left: 8%; animation-delay: 0s; opacity: 0.8; width: 60px; height: 60px;"></div>
+<div class="rose" style="left: 20%; animation-delay: 3s; opacity: 0.5; width: 50px; height: 50px;"></div>
+<div class="rose" style="left: 35%; animation-delay: 1s; opacity: 0.7; width: 55px; height: 55px;"></div>
+ 
 
 <audio id="ambientAudio" loop autoplay muted>
   <source src="audio/audiolilith-ambient.mp3" type="audio/mpeg">
