--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -143,6 +143,14 @@
   </style>
 </head>
 <body>
+  <!-- Floating Dark Roses -->
+<div class="rose red" style="left: 10%; animation-delay: 0s;"></div>
+<div class="rose purple" style="left: 25%; animation-delay: 2s;"></div>
+<div class="rose black" style="left: 40%; animation-delay: 1s;"></div>
+<div class="rose red" style="left: 55%; animation-delay: 3s;"></div>
+<div class="rose purple" style="left: 70%; animation-delay: 5s;"></div>
+<div class="rose black" style="left: 85%; animation-delay: 4s;"></div>
+
 <!-- Floating Roses -->
 <div class="rose" style="left: 8%; animation-delay: 0s; opacity: 0.8; width: 60px; height: 60px;"></div>
 <div class="rose" style="left: 20%; animation-delay: 3s; opacity: 0.5; width: 50px; height: 50px;"></div>
