--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -232,7 +232,7 @@
 
 <footer>
   <p>
-    &copy; 2025 Nocturne Nights<br/>
+    &copy; 2025 DARK HEARTS XOXOX<br/>
     <a href="index.html">Home</a> |
     <a href="membership.html">Membership</a> |
     <a href="legal.html">Legal</a>
