--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -35,6 +35,30 @@
     transform: translateY(-20vh) rotate(360deg);
     opacity: 0;
   }
+ .rose.red {
+  background-image: url('images/rose-red.png');
+}
+
+.rose.purple {
+  background-image: url('images/rose-purple.png');
+}
+
+.rose.black {
+  background-image: url('images/rose-black.png');
+}
+.rose {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  opacity: 0.5;
+  animation: floatRose 22s linear infinite;
+  pointer-events: none;
+  z-index: 0;
+  filter: drop-shadow(0 0 4px #660000);
+}
+ 
 }
 
     body {
