--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -6,61 +6,47 @@
   <title>Meet Lilith</title>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Great+Vibes&display=swap" rel="stylesheet">
   <style>
-     .rose.red {
-  background-image: url('images/rose-red.png');
-}
-
-.rose.purple {
-  background-image: url('images/rose-purple.png');
-}
-
-.rose.black {
-  background-image: url('images/rose-black.png');
-}
-.rose {
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  opacity: 0.5;
-  animation: floatRose 22s linear infinite;
-  pointer-events: none;
-  z-index: 0;
-  filter: drop-shadow(0 0 4px #660000);
-    .rose {
-      .rose {
-  /* ...other properties */
-  filter: drop-shadow(0 0 6px #ff4d6d);
-}
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  background-image: url('images/rose.png'); /* Update if using a different filename */
-  background-size: contain;
-  background-repeat: no-repeat;
-  opacity: 0.6;
-  animation: floatRose 22s linear infinite;
-  pointer-events: none;
-  z-index: 0;
-}
-
-@keyframes floatRose {
-  0% {
-    transform: translateY(100vh) rotate(0deg);
-    opacity: 0;
-  }
-  20% {
-    opacity: 0.7;
-  }
-  100% {
-    transform: translateY(-20vh) rotate(360deg);
-    opacity: 0;
+   <style>
+  .rose {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    opacity: 0.5;
+    animation: floatRose 22s linear infinite;
+    pointer-events: none;
+    z-index: 0;
+    filter: drop-shadow(0 0 4px #660000);
   }
 
-}
- 
-}
+  .rose.red {
+    background-image: url('images/rose-red.png');
+  }
+
+  .rose.purple {
+    background-image: url('images/rose-purple.png');
+  }
+
+  .rose.black {
+    background-image: url('images/rose-black.png');
+  }
+
+  @keyframes floatRose {
+    0% {
+      transform: translateY(100vh) rotate(0deg);
+      opacity: 0;
+    }
+    20% {
+      opacity: 0.7;
+    }
+    100% {
+      transform: translateY(-20vh) rotate(360deg);
+      opacity: 0;
+    }
+  }
+</style>
+
     body {
       background-color: #0e0e0e;
       color: #fff;
