--- a/lilith-profile.html
+++ b/lilith-profile.html
@@ -45,30 +45,72 @@
       opacity: 0;
     }
   }
-</style>
+  .rose {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    opacity: 0.5;
+    animation: floatRose 22s linear infinite;
+    pointer-events: none;
+    z-index: 0;
+    filter: drop-shadow(0 0 4px #660000);
+  }
 
-    body {
-      background-color: #0e0e0e;
-      color: #fff;
-      font-family: 'Cinzel', serif;
-      margin: 0;
-      padding: 0;
+  .rose.red {
+    background-image: url('images/rose-red.png');
+  }
+
+  .rose.purple {
+    background-image: url('images/rose-purple.png');
+  }
+
+  .rose.black {
+    background-image: url('images/rose-black.png');
+  }
+
+  @keyframes floatRose {
+    0% {
+      transform: translateY(100vh) rotate(0deg);
+      opacity: 0;
     }
-    header {
-      background-image: url('images/lilith-banner.png');
-      background-size: cover;
-      background-position: center;
-      height: 300px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    20% {
+      opacity: 0.7;
     }
-    header h1 {
-      font-family: 'Great Vibes', cursive;
-      color: #ffcad4;
-      font-size: 3em;
-      text-shadow: 2px 2px 6px #000;
+    100% {
+      transform: translateY(-20vh) rotate(360deg);
+      opacity: 0;
     }
+  }
+
+  body {
+    background-color: #0e0e0e;
+    color: #fff;
+    font-family: 'Cinzel', serif;
+    margin: 0;
+    padding: 0;
+  }
+
+  header {
+    background-image: url('images/lilith-banner.png');
+    background-size: cover;
+    background-position: center;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  header h1 {
+    font-family: 'Great Vibes', cursive;
+    color: #ffcad4;
+    font-size: 3em;
+    text-shadow: 2px 2px 6px #000;
+  }
+
+  /* continue with .content, h2, .gallery-row, etc. */
+
     .content {
       padding: 2em;
       max-width: 1000px;
