--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <img src="images/Dark-Hearts-Logo-official.png" alt="Dark Hearts Logo">
   </header>
 
-  <h1>Welcome to Nocturne Nights</h1>
+  <h1>Welcome to Dark Hearts</h1>
   <p>A sanctuary of desire and darkness. Choose your companion...</p>
   <div class="companions-grid">
     <!-- Lilith Card -->
